# restaurant-management

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Caddyfile  IMPLEMENTATION_PROGRESS.md  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  docker.ps1  docker.sh  package-lock.json  package.json  start.bat
.obsidian/: workspace.json
client/: .dockerignore  Dockerfile  components.json  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml
database/: insert.sql  table.sql
deploy/: .env.example  MIGRATION.md  MIGRATION_TROUBLESHOOTING.md  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
docs/: BUSINESS_USE_CASES.md  DATABASE.md  DATABASE_DOCUMENTATION_SUMMARY.md  DATABASE_ERD.mmd  DATABASE_QUERIES.sql  DATABASE_SUMMARY.md  DOCKER.md  FEATURE_DOCUMENTATION_TEMPLATE.md  FILE_STORAGE_GUIDE.md  MENU_MANAGEMENT_FEATURES.md  PROJECT_DOCUMENTATION.md  README.md  README_DOCUMENT_GENERATOR.md  TAI_LIEU_MO_TA_DU_AN.docx  VIDEO_DEMO_SCRIPT.md  VISUAL_FLOOR_PLAN_SHORTCUTS.md  common-queries.sql  database-setup.sql  erd-diagram.mmd  generate_project_document.py
migration/: README_TAURI.md  TAURI_MIGRATION_PLAN.md
nginx/: nginx.conf
openspec/: project.md
scripts/: backup-db.sh  deploy.sh  generate-secrets.sh  restore-db.sh  rollback.sh  smoke-test.sh
server/: .dockerignore  .gitignore  API_DOCUMENTATION.md  Dockerfile  Dockerfile.dev  IMPLEMENTATION_SUMMARY.md  README.md  (+5 more)
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
(+1637 files in other folders)
