[package]
name = "restaurant-management"
version = "0.1.0"
description = "A Tauri desktop application for restaurant management"
authors = ["Restaurant Management Team"]
license = "MIT"
repository = "https://github.com/huy1235588/restaurant-management"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# This feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
